...
                                <action selector="buttonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="3dX-2h-Sdd"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R3e-L7-iyw" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
                            <rect key="frame" x="166" y="216.33333333333334" width="277" height="50.000000000000028"/>
                            <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                            <accessibility key="accessibilityConfiguration" identifier="answerYes" label="yes"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="50" id="356-gS-WbP" customClass="LayoutConstraint" customModule="KanjiRyokucha" customModuleProvider="target">
                                    <userDefinedRuntimeAttributes>
                                        <userDefinedRuntimeAttribute type="number" keyPath="📱3¨5_const">
                                            <real key="value" value="42"/>
                                        </userDefinedRuntimeAttribute>
...
                            <connections>
                                <action selector="buttonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="nLj-BX-lQ8"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5w3-fh-qbf">
                            <rect key="frame" x="0.0" y="401.33333333333331" width="451" height="220.66666666666669"/>
                            <accessibility key="accessibilityConfiguration" identifier="flipCard"/>
                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="25"/>
                            <state key="normal" title="flip back">
                                <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                            </state>
                            <connections>
                                <action selector="buttonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="0Fb-gf-nKU"/>
...
