...

import Foundation
import EasyTipView

enum TipType: Int {
    case srsButtons = 0
    case startReview
    case strokeOrder
    case submitAnswers
    case studyTab
    case studyPhase
}

...
