...
                        <action selector="backToLogin" destination="-1" eventType="touchUpInside" id="ltz-1b-FEB"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RxG-XF-pUW" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
                    <rect key="frame" x="138" y="382" width="100" height="44"/>
                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                    <accessibility key="accessibilityConfiguration" identifier="startGuest"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="FzY-kt-SYz"/>
                        <constraint firstAttribute="width" constant="100" id="nFZ-tF-NBb"/>
                    </constraints>
                    <state key="normal" title="Start!">
                        <color key="titleColor" red="0.54094521650000005" green="0.66909365109999996" blue="0.1146249371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
